directory clean up/init test

--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ CLIENT_SESS_DB=clientsessdb
 CLIENT_SESS_DB_PORT=8369
 RATE_LIMIT_DB=ratelimitdb
 RATE_LIMIT_DB_PORT=9379
-SERVER_NAME=umjini.baughcl.tech
-SOCKET_SERVER_NAME=socket.baughcl.tech
+SERVER_NAME=umj.baughlabs.tech
+SOCKET_SERVER_NAME=socket.baughlabs.tech
 REQUEST_TIMEOUT=600
 API_TOKEN_NAME=wkflw_token
 sdn_count=1
