api key gen fix

--- a/.env
+++ b/.env
@@ -1,3 +1,17 @@
+# Configure these settins for OTP Link and SMTP functionality
+OTS_USER= # onetimesecret.com user email
+OTS_KEY= # onetimesecret.com API key
+OTS_TTL=300 # Time to live for OTP links in seconds (default 5 minutes)
+SMTP_SERVER=
+SMTP_PORT=
+SMTP_SENDER=
+SMTP_SENDER_APP_PASSWORD=
+SMTP_RECEIVER=
+
+# Set server URL here (must be FQDN)
+SERVER_NAME=umj.baughlabs.tech
+#SOCKET_SERVER_NAME=socket.baughlabs.tech
+
 # Enter your MCP server urls here for use within umjiniti
 MCP_URLS='["https://user.mcp1.com/mcp/", "https://user.mcp2.com/mcp/"]'
 
@@ -12,12 +26,11 @@ CLIENT_SESS_DB=clientsessdb
 CLIENT_SESS_DB_PORT=8369
 RATE_LIMIT_DB=ratelimitdb
 RATE_LIMIT_DB_PORT=9379
-SERVER_NAME=umj.baughlabs.tech
-SOCKET_SERVER_NAME=socket.baughlabs.tech
 REQUEST_TIMEOUT=600
 API_TOKEN_NAME=wkflw_token
 sdn_count=1
 alert_count=3
+
 
 
 
