--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-# Configure these settins for OTP Link and SMTP functionality
-OTS_USER= # onetimesecret.com user email
-OTS_KEY= # onetimesecret.com API key
-OTS_TTL=300 # Time to live for OTP links in seconds (default 5 minutes)
+# onetimesecret API credentials for sending OTP links
+OTS_USER= 
+OTS_KEY= 
+OTS_TTL=300
+
+# SMTP email server settings for sending OTP links
 SMTP_SERVER=
 SMTP_PORT=
 SMTP_SENDER=
@@ -10,7 +12,6 @@ SMTP_RECEIVER=
 
 # Set server URL here (must be FQDN)
 SERVER_NAME=umj.baughlabs.tech
-#SOCKET_SERVER_NAME=socket.baughlabs.tech
 
 # Enter your MCP server urls here for use within umjiniti
 MCP_URLS='["https://user.mcp1.com/mcp/", "https://user.mcp2.com/mcp/"]'
