registration, secure api key delivery test

--- a/.env
+++ b/.env
@@ -1,24 +1,14 @@
-# onetimesecret API credentials for sending OTP links
-OTS_USER= 
+# onetimesecret API key for generating OTP links
+OTS_USER=
 OTS_KEY= 
 OTS_TTL=300
 
-# SMTP email server settings for sending OTP links
-SMTP_SERVER=
-SMTP_PORT=
-SMTP_SENDER=
-SMTP_SENDER_APP_PASSWORD=
-SMTP_RECEIVER=
+# Brevo API key for sending OTP links
+BREVO_API_KEY=
+BREVO_SENDER_EMAIL=
 
 # Set server URL here (must be FQDN)
 SERVER_NAME=umj.baughlabs.tech
-
-# Enter your MCP server urls here for use within umjiniti
-MCP_URLS='["https://user.mcp1.com/mcp/", "https://user.mcp2.com/mcp/"]'
-
-# Set how many SDN controllers (UniFi, TP Link Omada) and alert contacts you want to allow
-sdn_count=1
-alert_count=3
 
 # No need to edit anything below this comment
 IP_BAN_DB=ipbanredis
@@ -33,9 +23,3 @@ RATE_LIMIT_DB=ratelimitdb
 RATE_LIMIT_DB_PORT=9379
 REQUEST_TIMEOUT=600
 API_TOKEN_NAME=wkflw_token
-
-
-
-
-
-
