ollama chat storage config

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # onetimesecret API key for generating OTP links
 OTS_USER=
-OTS_KEY= 
+OTS_KEY=
 OTS_TTL=300
 OTS_REGION=eu
 
@@ -10,6 +10,9 @@ BREVO_SENDER_EMAIL=
 
 # Set server URL here (must be FQDN)
 SERVER_NAME=umj.baughlabs.tech
+
+# Ollama model name (can change to your preferred model)
+OLLAMA_MODEL=qwen3:1.7b
 
 # No need to edit anything below this comment
 IP_BAN_DB=ipbanredis
