--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ socketapp/mcp/ollamaproxy/old_files/*
 logs.txt
 agentapp/templates/app/settings-old.html
 agentapp/templates/index/index_old.html
+socketapp/probe_mcp/ollamaproxy/test.py
